--- a/src/css/reset.css
+++ b/src/css/reset.css
@@ -31,4 +31,11 @@ img {
   display: block;
   max-width: 100%;
   height: auto;
+  object-fit: cover;
+  overflow: hidden;
+}
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
